--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
     <head>
         <title>Stopwatch</title>
         <script src="app.js"></script>
+        <link rel="stylesheet" href="app.css">
     </head>
     <body>
-        <div>
-            <p>Javascript Stopwatch</p>
+        <div class="watch">
+            <h1>Javascript Stopwatch</h1>
             <p><span id="minutes">00</span>:<span id="seconds">00</span>:<span id="milliseconds">00</span></p>
-            <button onclick="start()">Start</button>
-            <button onclick="stop()">Stop</button>
+            <button onclick="start()" id="start">Start</button>
+            <button onclick="stop()" id="stop">Stop</button>
             <button onclick="reset()">Reset</button>
         </div>
     </body>
